--- a/photo_app/templates/user_page.html
+++ b/photo_app/templates/user_page.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <form action='' method="post" enctype="multipart/form-data">
+        {% csrf_token %}
         <input type="text" name="description"/>
         <input type='file' name='picture'/>
         <input type='submit' value='Submit'/>
