--- a/photo_app/templates/user_page.html
+++ b/photo_app/templates/user_page.html
@@ -5,11 +5,21 @@
     <title>User Page</title>
 </head>
 <body>
-    <form action='' method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        <input type="text" name="description"/>
-        <input type='file' name='picture'/>
-        <input type='submit' value='Submit'/>
-    </form>
+<form action='' method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <input type="text" name="description"/>
+    <input type='file' name='picture'/>
+    <input type='submit' value='Submit'/>
+</form>
+
+{% for pic in pictures %}
+    <div>
+        <img src='{{pic.field.url}}' alt=''/>
+        <p>
+            {{pic.description}}
+        </p>
+    </div>
+{% endfor %}
+
 </body>
 </html>
